--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 body {
   margin: 0;
   padding: 0;
+  background-color: #000000;
 }
